<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteViewer">

    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/new_note_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/noteText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/write_your_note_here"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/layout_AudioControls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTitle" />

    <LinearLayout
        android:id="@+id/layout_AudioControls"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteText">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnAudioRecording"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:icon="@drawable/ic_audio"
            app:iconGravity="start" />

        <Button
            android:id="@+id/btnPlayRecording"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            app:icon="@android:drawable/ic_media_play"
            app:iconGravity="textEnd" />

        <Button
            android:id="@+id/btnDeleteRecording"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:enabled="false"
            app:icon="@android:drawable/ic_delete"
            app:iconGravity="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_AudioControls">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTakePhoto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                app:layout_constraintBottom_toTopOf="@+id/btnSaveNote"
                app:layout_constraintHorizontal_bias="1.0" />

            <Button
                android:id="@+id/btnDeleteImage"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/remove_photo" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewPictureThumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:baselineAlignBottom="false" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSaveNote"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="buttonSave"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="deleteNote"
        android:text="@string/deleteNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>